--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>Weather App</title>
-  </head>
+    <title>الطقس  </title>
+  </head dir="rtl">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
